# Prikolniy_tweaker

./: Cargo.toml  build.rs
.github/workflows/: rust.yml
src/: main.rs  window.rs
src/resources/: resources.gresource.xml  window.ui
