[package]
name = "tweaker"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
[dependencies]
gtk4 = { version = "0.11.0-alpha.1" }
anyhow = "1.0.82"
rand = "0.9"
libadwaita = "0.9.0-alpha.0"
sysinfo = "0.28"

[build-dependencies]
glib-build-tools = "0.22.0-alpha.1"
